5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1758_1185.log
== TEST (2019-05-28 12:42:08) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if glic[i]>99:
		print(i)
		quant=quant+1
		i=i+1
print(quant)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:42:38) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if glic[i]>99:
	print(i)
		quant=quant+1
		i=i+1
print(quant)
-- ERROR:
File "XXXX", line 8
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:42:42) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if glic[i]>99:
print(i)
		quant=quant+1
		i=i+1
print(quant)
-- ERROR:
File "XXXX", line 8
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:43:18) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if glic[i]>99:
		print(i)
		quant=quant+1
		i=i+1
print(quant)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:43:55) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if (glic[i]>99):
		print(i)
		quant=quant+1
		i=i+1
print(quant)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:44:30) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if (glic[i]>99):
		print(i)
		quant=quant+1
	i=i+1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:44:31) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if (glic[i]>99):
		print(i)
		quant=quant+1
	i=i+1
	
-- EXECUTION TIME:
0.796655
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
entre com o vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:44:51) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if (glic[i]>99):
		print(i)
		quant=quant+1
	i=i+1
	print(quant)
	
-- EXECUTION TIME:
0.468016
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
1
1
2
2
2
4
3
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
0
1
1
2
2
3
3
4
4
5
5
6
6
6
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
0
0
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:44:53) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if (glic[i]>99):
		print(i)
		quant=quant+1
	i=i+1
	print(quant)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:45:16) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if (glic[i]>99):
		print(i)
		quant=quant+1
	i=i+1
print(quant)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:45:39) 
-- CODE:
from numpy import*
glic=array(eval(input("entre com o vetor:")))

quant=0
i=0
while(i < size(glic)):
	if (glic[i]>99):
		print(i)
		quant=quant+1
	i=i+1
print(quant)
	
-- EXECUTION TIME:
0.455624
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
